<resources>
    <string name="app_name">Practitioner</string>
    <string name="internal_storage">Internal storage</string>
    <string name="please_enter_message">please enter message</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="are_you_sure_want_to_log_out">Are you sure want to log out?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="status">Status</string>
    <string name="dollar">$ </string>
    <string name="menu_home">Home</string>
    <string name="profile">Profile</string>
    <string name="email">Email</string>
    <string name="create">CREATE</string>
    <string name="store_name">Store Name</string>
    <string name="last_name">Last Name</string>
    <string name="my_profile">My Profile</string>
    <string name="welcome_text">Hey,\nLogin Now.</string>
    <string name="sign_up">Sign up</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="first_name_last_name">
<![CDATA[ First Name & Last Name ]]>
</string>
    <string name="first_name">First Name</string>
    <string name="lase_name">Lase Name</string>
    <string name="email_address">Email Address</string>
    <string name="create_password">Create Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="next">NEXT</string>
    <string name="select">Select</string>
    <string name="doctor">Doctor</string>
    <string name="nurse">Nurse</string>
    <string name="speciality">Speciality</string>
    <string name="select_a_field_of_speciality">Select a field of speciality</string>
    <string name="hospitals">Hospitals</string>
    <string name="list_of_hospitals">List of Hospitals</string>
    <string name="search_speciality_or_hospitals">Search Speciality or Hospitals</string>
    <string name="search">Search</string>
    <string name="consultation_sessions">Consultation Sessions</string>
    <string name="consultation">Consultation</string>
    <string name="concern">Concern</string>
    <string name="medications_prescribed">Medications Prescribed</string>
    <string name="doctor_notes">Doctor Notes</string>
    <string name="nurse_notes">Nurse Notes</string>
    <string name="select_nurse">Select Nurse</string>
    <string name="doctor_prescription">Doctor Prescription</string>
    <string name="edit_medications">Edit Medications</string>
    <string name="add_new">+ <u>Add New</u></string>
    <string name="save">Save</string>
    <string name="doctor_information">Doctor Information</string>
    <string name="add_photo">Add Photo</string>
    <string name="name">Name</string>
    <string name="about_description">About Description</string>
    <string name="update">UPDATE</string>
    <string name="doctor_info">Profile Info</string>
    <string name="logout">Logout</string>
    <string name="add_hospital">+ Add Hospital</string>
    <string name="hospital_s_associated">Hospital(s) Associated</string>
    <string name="gender">Gender</string>
    <string name="role">Role</string>
    <string name="dob">DOB</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="yesterday">Yesterday</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="filter">Filter</string>
    <string name="apply">Apply</string>
</resources>