<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#99000000">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499">

        <CheckBox
            android:id="@+id/checkBox"
            style="@style/text_style_medium_14sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:text="@string/yesterday"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView39" />

        <TextView
            android:id="@+id/textView39"
            android:layout_width="0dp"
            android:background="@color/gray_lite"
            android:gravity="center"
            style="@style/text_style_medium_14sp"
            android:layout_height="36dp"
            android:text="@string/filter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/today"
            app:layout_constraintEnd_toEndOf="@+id/checkBox"
            app:layout_constraintStart_toStartOf="@+id/checkBox"
            app:layout_constraintTop_toBottomOf="@+id/checkBox" />

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tomorrow"
            app:layout_constraintEnd_toEndOf="@+id/checkBox2"
            app:layout_constraintStart_toStartOf="@+id/checkBox2"
            app:layout_constraintTop_toBottomOf="@+id/checkBox2" />

        <TextView
            android:id="@+id/textView41"
            android:layout_width="100dp"
            android:layout_height="36dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:fontFamily="@font/poppins_regular"
            android:textSize="12sp"
            android:background="@drawable/boarder_bg"
            android:textColor="@color/red"
            android:layout_marginBottom="16dp"
            android:text="@string/apply"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox3" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>