<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="signupViewModel"
            type="com.wekanmdb.storeinventory.ui.signup.SignupViewModel" />

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/textView9"
            style="@style/text_style_semibold_17sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="Welcome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            style="@style/text_style_semibold_14sp"
            android:layout_marginEnd="24dp"
            android:text="@string/speciality"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginTop="8dp"
            android:hint="@string/select_a_field_of_speciality"
            style="@style/signup_edittext_style"
            android:textColor="@color/text_color"
            android:gravity="center|start"
            android:drawablePadding="4dp"
            android:drawableEnd="@drawable/ic_right_arrow"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView36"
            style="@style/text_style_semibold_14sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/hospital_s_associated"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView37"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:background="@drawable/bg_green_border"
            style="@style/text_style_semibold_14sp_green"
            android:text="@string/add_hospital"
            app:layout_constraintEnd_toEndOf="@+id/textView36"
            app:layout_constraintStart_toStartOf="@+id/textView36"
            app:layout_constraintTop_toBottomOf="@+id/textView36" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="1dp"
            app:layout_constraintBottom_toTopOf="@+id/textView38"
            app:layout_constraintEnd_toEndOf="@+id/textView37"
            app:layout_constraintStart_toStartOf="@+id/textView37"
            app:layout_constraintTop_toBottomOf="@+id/textView37"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView38"
            style="@style/text_style_semibold_14sp_white"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_bg"
            android:gravity="center"
            android:text="Save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/recyclerView"
            app:layout_constraintStart_toStartOf="@+id/recyclerView"
            app:layout_constraintTop_toBottomOf="@+id/recyclerView" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    <!--
        </androidx.core.widget.NestedScrollView>
    -->
</layout>