<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!--    <data>

            <variable
                name="homeViewModel"
                type="com.wekanmdb.storeinventory.ui.home.HomeViewModel" />

        </data>-->
    <!--    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/textView9"
            style="@style/text_style_semibold_17sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/doctor_information"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/view_bg">

                <ImageView
                    android:id="@+id/imageView14"
                    android:layout_width="127dp"
                    android:layout_height="129dp"
                    android:scaleType="fitXY"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageView15"
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/imageView14"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@mipmap/plus" />

                <TextView
                    android:id="@+id/textView31"
                    style="@style/text_style_regular_14sp_gray"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/add_photo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView15" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView32"
            style="@style/text_style_semibold_14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView2" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            app:cardBackgroundColor="@color/card_view_bg"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView32"
            app:layout_constraintTop_toBottomOf="@+id/textView32">

            <EditText
                android:id="@+id/editTextTextPersonName4"
                style="@style/text_style_semibold_12sp"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:background="@null"
                android:ems="10"
                android:inputType="textPersonName"
                android:padding="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView32"
                app:layout_constraintTop_toBottomOf="@+id/textView32" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView33"
            style="@style/text_style_semibold_12sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/speciality"
            app:layout_constraintEnd_toEndOf="@+id/cardView3"
            app:layout_constraintStart_toStartOf="@+id/cardView3"
            app:layout_constraintTop_toBottomOf="@+id/cardView3" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            app:cardBackgroundColor="@color/card_view_bg"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView33"
            app:layout_constraintTop_toBottomOf="@+id/textView33">

            <TextView
                android:id="@+id/textSpeciality"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|start"
                android:padding="4dp"
                style="@style/text_style_semibold_12sp"
                android:hint="@string/select"
                android:drawableEnd="@drawable/ic_right_arrow" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView34"
            style="@style/text_style_semibold_12sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="32dp"
            android:text="@string/about_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView4" />
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            app:cardBackgroundColor="@color/card_view_bg"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView34"
            app:layout_constraintTop_toBottomOf="@+id/textView34">

            <EditText
                android:id="@+id/editTextTextPersonName5"
                style="@style/text_style_semibold_12sp"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:background="@null"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:padding="4dp"
        />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView35"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginBottom="16dp"
            android:text="@string/update"
            android:gravity="center"
            android:background="@drawable/button_bg"
            style="@style/text_style_semibold_14sp_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/cardView5"
            app:layout_constraintStart_toStartOf="@+id/cardView5" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <!--
        </androidx.core.widget.NestedScrollView>
    -->
</layout>